--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 /backend/node_modules
-/backend/.env
 /dashboard/node_modules
-/dashboard/.env
-/frontend/node_modules
-/frontend/.env
+/frontend2/node_modules
